fixing footer covering other stuff.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -27,6 +27,7 @@ footer {
     padding-left: 1rem;
     justify-content: center;
     flex-wrap: wrap;
+    height: 60px;
 }
 
 header h1 {
